--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3"
+  },
+  "devDependencies": {
+    "prettier": "3.4.2"
   }
 }
